--- a/Documents/NetBeansProjects/projeto-Unikut/nbproject/project.properties
+++ b/Documents/NetBeansProjects/projeto-Unikut/nbproject/project.properties
@@ -29,7 +29,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Biblioteca-Unikut.jar}:\
+    ${reference.ArquivoLista-Unikut.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +61,10 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.ArquivoLista-Unikut=../ArquivoLista-Unikut
+project.Biblioteca-Unikut=../Biblioteca-Unikut
+reference.ArquivoLista-Unikut.jar=${project.ArquivoLista-Unikut}/dist/ArquivoLista-Unikut.jar
+reference.Biblioteca-Unikut.jar=${project.Biblioteca-Unikut}/dist/Biblioteca-Unikut.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
