--- a/Documents/NetBeansProjects/projeto-Unikut/nbproject/project.properties
+++ b/Documents/NetBeansProjects/projeto-Unikut/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=projeto.unikut.ProjetoUnikut
+main.class=com.view.Unikut.ProjetoUnikut
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
